// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre <GifGridItem/> Debe mostrar el componente correctamente 1`] = `
<div
  className="carta animate__animated animate__fadeIn"
>
  <img />
  <p />
</div>
`;

exports[`Pruebas sobre <GifGridItem/> Debe recibir las propiedades "title" y "url" 1`] = `
<div
  className="carta animate__animated animate__fadeIn"
>
  <img
    alt="Un título"
    src="https://localhost/algo.jpg"
  />
  <p>
    Un título
  </p>
</div>
`;
